# tailor_offset_in_cylinder_demo

./: .gitmodules  BooleanOperations.cpp  BooleanOperations.h  CMakeLists.txt  CurveOffset.h  Cylinder3DView.cpp  Cylinder3DView.h  CylindricalOffsetViews.cpp  CylindricalOffsetViews.h  CylindricalRegion.cpp  CylindricalRegion.h  FourViewContainer.cpp  FourViewContainer.h  PeriodicClipper.cpp  PeriodicClipper.h  PeriodicClippingViews.cpp  PeriodicClippingViews.h  PolygonIO.cpp  PolygonIO.h  Sketch2DView.cpp  Sketch2DView.h  main.cpp
